kubernetes/apps/nextcloud/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: longhorn
      resources:
        requests:
          storage: 5Gi
  template:
    metadata:
    spec:
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: pvc-nextcloud
      - name: data
        nfs: 
          server: 192.168.20.119
          path: /volume2/Homelab-HDD/Nextcloud
      - name: dcim
        nfs:
          server: 192.168.20.119
          path: /volume2/DCIM
      containers:
      - image: nextcloud:27.0.2
        name: nextcloud
        resources:
          requests:
            cpu: "100m"
            memory: "2048Mi"
        volumeMounts:
         - name: config
           mountPath: /var/www/html
         - name: data
           mountPath: /var/www/html/data
         - name: dcim
           mountPath: /external/DCIM
