kubernetes/apps/nextcloud/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: svc-nextcloud
  namespace: nextcloud
spec:
  type: ClusterIP
  ports:
    - name: http-port
      protocol: TCP
      port: 80
